--- a/style/main.css
+++ b/style/main.css
@@ -23,3 +23,72 @@
 body {
     padding-top: 70px;
 }
+/*
+  ========================================
+  Contact
+  ========================================
+*/
+
+form {
+	width:459px;
+	margin:0 auto;
+    border: 1px solid grey;
+    border-radius: 10px;
+    padding: 15px;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+label {
+	display:block;
+	margin-top:20px;
+	letter-spacing:2px;
+}
+input, textarea {
+	width:439px;
+	height:27px;
+	background:#efefef;
+	border-radius:5px;
+	-moz-border-radius:5px;
+	-webkit-border-radius:5px;
+	border:1px solid #dedede;
+	padding:10px;
+	margin-top:3px;
+	font-size:0.9em;
+	color:#3a3a3a;
+}
+
+textarea {
+	height:213px;
+	font-family:Arial, Helvetica, sans-serif;
+}
+#submit {
+	background-color: #268bd2;
+    color: white;
+	width:127px;
+	height:45px;
+	border:none;
+	margin-top:20px;
+	cursor:pointer;
+}
+#submit:hover {
+		opacity:0.7;
+}
+input, textarea,
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+    font-size: 12px;
+}
+.output {
+    color: red;
+    margin-top: 20px;
+}
+/*
+  ========================================
+  Map
+  ========================================
+*/
+#map {
+        width: 100%;
+        height: 400px;
+      }
