--- a/style/main.css
+++ b/style/main.css
@@ -100,3 +100,14 @@ textarea::-webkit-input-placeholder {
 .list-group {
     padding-top: 30px;
 }
+/*
+========================================
+    Main
+========================================
+*/
+h1 {
+    text-align: center;
+}
+h3 {
+    text-align: center;
+}
