--- a/style/main.css
+++ b/style/main.css
@@ -84,15 +84,6 @@ textarea::-webkit-input-placeholder {
     margin-top: 20px;
 }
 /*
-  ========================================
-  Map
-  ========================================
-*/
-#map {
-       width: 50%;
-       height: 400px;
-     }
-/*
 ========================================
     Output
 ========================================
@@ -103,6 +94,12 @@ textarea::-webkit-input-placeholder {
     width: 100%;
     overflow:hidden;
     overflow-y:scroll;
+    text-align: center;
+    text-decoration: underline;
+}
+.list-group li:hover {
+    color: red;
+    cursor: pointer;
 }
 
 /*
@@ -118,4 +115,7 @@ h3 {
 }
 h4 {
     text-align: center;
+}
+.title {
+    
 }
