--- a/style/main.css
+++ b/style/main.css
@@ -23,6 +23,10 @@
 a.selected {
     color: #ffc663;
 }
+#nav-bottom {
+    margin: 0;
+    padding: 0;
+}
 /*
   ========================================
   Contact
