--- a/style/landing.css
+++ b/style/landing.css
@@ -299,7 +299,44 @@ h2 {
 	-moz-animation-name: drunk;
 	animation-name: drunk;
 }
-button {
+.btn {
+  background: #ffffff;
+  background-image: -webkit-linear-gradient(top, #ffffff, #ffffff);
+  background-image: -moz-linear-gradient(top, #ffffff, #ffffff);
+  background-image: -ms-linear-gradient(top, #ffffff, #ffffff);
+  background-image: -o-linear-gradient(top, #ffffff, #ffffff);
+  background-image: linear-gradient(to bottom, #ffffff, #ffffff);
+  -webkit-border-radius: 3;
+  -moz-border-radius: 3;
+  border-radius: 3px;
+  font-family: Arial;
+  color: #2d2d2d;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid #2d2d2d 2px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+.button-box {
     text-align: center;
-    border: 2px solid grey;
+    margin-top: 50px;
+}
+.header {
+    text-align: center;
+}
+.header h1 {
+    font-size: 5em;
+    font-family: 'Special Elite', cursive;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
