--- a/style/main.css
+++ b/style/main.css
@@ -108,8 +108,6 @@ td {
     font-size: 0.8em;
     color: #2d2d2d;
 }
-
-
 /*
 ========================================
     Main
@@ -135,10 +133,13 @@ p {
 body {
     padding-top: 120px;
     font-family: 'Raleway', sans-serif;
-
+    /*background-image: url("http://foundersbrewing.com/wp-content/uploads/2012/04/AllDayAwardsBackground.jpg");*/
+    /*background-repeat:no-repeat;
+    background-size: cover;*/
 }
 .quote {
-    border: 1px solid #d9d9d9;
+    border: 1px solid white;
     border-radius: 5px;
     padding: 5px;
+    /*color: white;*/
 }
