--- a/style/main.css
+++ b/style/main.css
@@ -117,7 +117,8 @@ h1, h3, h4, h5 {
     text-align: center;
 }
 h3 {
-    width: 50%;
+    margin-bottom: 30px;
+    font-family: 'Special Elite', cursive;
 }
 .title {
     font-size: 6em;
@@ -142,4 +143,10 @@ body {
     border-radius: 5px;
     padding: 5px;
     /*color: white;*/
+}
+.map {
+  width:auto !important;
+  margin-left: 100px !important;
+  margin-right: 100px !important;
+  height:600px !important;
 }
