--- a/style/main.css
+++ b/style/main.css
@@ -105,9 +105,10 @@ textarea::-webkit-input-placeholder {
     text-align: center;
 }
 td {
-    font-size: 0.8em;
+    font-size: 1em;
     color: #2d2d2d;
 }
+@media(max-width: 720px){td{font-size: 1.5em}}
 /*
 ========================================
     Main
@@ -142,11 +143,11 @@ body {
     border: 1px solid white;
     border-radius: 5px;
     padding: 5px;
-    /*color: white;*/
 }
 .map {
-  width:auto !important;
-  margin-left: 100px !important;
-  margin-right: 100px !important;
+  width:90% !important;
+  margin-left: 5% !important;
+  margin-right: 5% !important;
   height:600px !important;
+  margin-bottom: 30px !important;
 }
