--- a/style/landing.css
+++ b/style/landing.css
@@ -3,18 +3,9 @@
     font-family: 'Bernier';
     src: url('bernier/Bernier.otf');
 }
-
-body { background-color: #0e83cd }
-
-h2 {
-  margin: 0 auto;
-  width: 400px;
-  font-size: 36px;
-  text-align: center;
-  font-family: 'Lato', sans-serif;
-  color: whiteSmoke;
+body {
+    background-color: #abcade;
 }
-
 #container {
   height: 370px;
   margin: 0 auto;
@@ -23,9 +14,9 @@ h2 {
   top: 0px;
   width: 248px;
 }
-
-#container div { position: absolute; }
-
+#container div {
+    position: absolute;
+}
 .pour {
   position: absolute;
   left: 45%;
@@ -34,7 +25,6 @@ h2 {
   background-color: #edaf32;
   border-radius: 10px
 }
-
 #beaker {
   border: 10px solid #FFF;
   border-top: 0;
@@ -44,7 +34,6 @@ h2 {
   bottom: 0;
   width: 200px;
 }
-
 #beaker:before,
 #beaker:after {
   border: 10px solid #FFF;
@@ -56,10 +45,12 @@ h2 {
   top: -40px;
   width: 30px;
 }
-
-#beaker:before { left: -50px; }
-#beaker:after { right: -50px; }
-
+#beaker:before {
+    left: -50px;
+}
+#beaker:after {
+    right: -50px;
+}
 #liquid {
   background-color: #edaf32;
   border: 10px solid #edaf32;
@@ -69,7 +60,6 @@ h2 {
   overflow: hidden;
   width: 180px;
 }
-
 #liquid:after {
   background-color: rgba(255, 255, 255, 0.25);
   bottom: -10px;
@@ -81,7 +71,6 @@ h2 {
   -webkit-transform: rotate(15deg);
   width: 110px;
 }
-
 #liquid .bubble {
   -webkit-animation-name: bubble;
   -webkit-animation-iteration-count: infinite;
@@ -92,7 +81,6 @@ h2 {
   height: 20px;
   width: 20px;
 }
-
 @-webkit-keyframes bubble {
   0% { bottom: 0; }
 
@@ -106,44 +94,36 @@ h2 {
       bottom: 160px;
    }
 }
-
 .bubble1 {
   left: 10px;
   -webkit-animation-delay: 1000ms;
   -webkit-animation-duration: 1000ms;
 }
-
 .bubble2 {
   left: 50px;
   -webkit-animation-delay: 700ms;
   -webkit-animation-duration: 1100ms;
 }
-
 .bubble3 {
   left: 100px;
   -webkit-animation-delay: 1200ms;
   -webkit-animation-duration: 1300ms;
 }
-
 .bubble4 {
   left: 130px;
   -webkit-animation-delay: 1100ms;
   -webkit-animation-duration: 700ms;
 }
-
 .bubble5 {
   left: 170px;
   -webkit-animation-delay: 1300ms;
   -webkit-animation-duration: 800ms;
 }
-
 /* Foam */
-
 .beer-foam {
   position: absolute;
   bottom: 10px;
 }
-
 .foam-1, .foam-2, .foam-3, .foam-4,
 .foam-5, .foam-6, .foam-7 {
   float: left;
@@ -182,134 +162,13 @@ h2 {
   top: -30px;
   left: 160px;
 }
-
-/* Drunk Text */
-
-.animated {
-  -webkit-animation-fill-mode:both;
-     -moz-animation-fill-mode:both;
-          animation-fill-mode:both;
-
-  -webkit-animation-duration:5s;
-     -moz-animation-duration:5s;
-          animation-duration:5s;
-
-  -webkit-animation-delay:3.5s;
-     -moz-animation-delay:3.5s;
-          animation-delay:3.5s;
-}
-
-
-.animated.drunk {
-  -webkit-animation-duration:2s;
-     -moz-animation-duration:2s;
-          animation-duration:2s;
-}
-
-@-webkit-keyframes drunk {
-	0% {
-    -webkit-transform: rotate(0);
-    -webkit-transform-origin: top left;
-    -webkit-animation-timing-function: ease-in-out;
-  }
-
-  20%, 60% {
-    -webkit-transform: rotate(80deg);
-    -webkit-transform-origin: top left;
-    -webkit-animation-timing-function: ease-in-out;
-  }
-	40% {
-    -webkit-transform: rotate(60deg);
-    -webkit-transform-origin: top left;
-    -webkit-animation-timing-function: ease-in-out;
-  }
-
-	80% {
-    -webkit-transform: rotate(60deg) translateY(0);
-    -webkit-transform-origin: top left;
-    -webkit-animation-timing-function: ease-in-out;
-    opacity: 1;
-  }
-
-	100% {
-	  -webkit-transform: translateY(700px);
-    opacity: 0;
-  }
-}
-
-@-moz-keyframes drunk {
-	0% {
-    -moz-transform: rotate(0);
-    -moz-transform-origin: top left;
-    -moz-animation-timing-function: ease-in-out;
-  }
-
-	20%, 60% {
-    -moz-transform: rotate(80deg);
-    -moz-transform-origin: top left;
-    -moz-animation-timing-function: ease-in-out;
-  }
-
-	40% {
-    -moz-transform: rotate(60deg);
-    -moz-transform-origin: top left;
-    -moz-animation-timing-function: ease-in-out;
-  }
-
-	80% {
-	  -moz-transform: rotate(60deg) translateY(0); opacity: 1;
-    -moz-transform-origin: top left;
-    -moz-animation-timing-function: ease-in-out;
-  }
-
-	100% {
-    -moz-transform: translateY(700px);
-    opacity: 0;
-  }
-}
-
-@keyframes drunk {
-	0% {
-    transform: rotate(0);
-    transform-origin: top left;
-    animation-timing-function: ease-in-out;
-  }
-
-	20%, 60% {
-    transform: rotate(80deg);
-    transform-origin: top left;
-    animation-timing-function: ease-in-out;
-  }
-
-	40% {
-    transform: rotate(60deg);
-    transform-origin: top left;
-    animation-timing-function: ease-in-out;
-  }
-
-	80% {
-    transform: rotate(60deg) translateY(0);
-    opacity: 1; transform-origin: top left;
-    animation-timing-function: ease-in-out;
-  }
-	100% {
-    transform: translateY(700px);
-    opacity: 0;
-  }
-}
-
-.drunk {
-	-webkit-animation-name: drunk;
-	-moz-animation-name: drunk;
-	animation-name: drunk;
-}
 .btn {
-  background: #ffffff;
-  background-image: -webkit-linear-gradient(top, #ffffff, #ffffff);
-  background-image: -moz-linear-gradient(top, #ffffff, #ffffff);
-  background-image: -ms-linear-gradient(top, #ffffff, #ffffff);
-  background-image: -o-linear-gradient(top, #ffffff, #ffffff);
-  background-image: linear-gradient(to bottom, #ffffff, #ffffff);
+  background: #edaf32;
+  background-image: -webkit-linear-gradient(top, #edaf32, #edaf32);
+  background-image: -moz-linear-gradient(top, #edaf32, #edaf32);
+  background-image: -ms-linear-gradient(top, #edaf32, #edaf32);
+  background-image: -o-linear-gradient(top, #edaf32, #edaf32);
+  background-image: linear-gradient(to bottom, #edaf32, #edaf32);
   -webkit-border-radius: 3;
   -moz-border-radius: 3;
   border-radius: 3px;
@@ -320,14 +179,13 @@ h2 {
   border: solid #2d2d2d 2px;
   text-decoration: none;
 }
-
 .btn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  background: #fff;
+  background-image: -webkit-linear-gradient(top, #fff, #fff);
+  background-image: -moz-linear-gradient(top, #fff, #fff);
+  background-image: -ms-linear-gradient(top, #fff, #fff);
+  background-image: -o-linear-gradient(top, #fff, #fff);
+  background-image: linear-gradient(to bottom, #fff, #fff);
   text-decoration: none;
 }
 #button {
