--- a/style/main.css
+++ b/style/main.css
@@ -27,10 +27,6 @@
 a.selected {
     color: #ffc663;
 }
-#nav-bottom {
-    margin-bottom: 0;
-    padding-bottom: 0;
-}
 /*
   ========================================
   Contact
@@ -126,6 +122,7 @@ h1, h3, h4, h5 {
 }
 h3 {
     margin-bottom: 30px;
+    margin-top: 0px;
     font-family:'Raleway';
 }
 .title {
@@ -142,7 +139,7 @@ p {
 body {
     padding-top: 120px;
     font-family: 'Raleway', sans-serif;
-    background-color: #e7e7e7;
+    background-color: #abcade;
 }
 .quote {
     padding: 5px;
