fixed bug to add all locations to the map

--- a/style/landing.css
+++ b/style/landing.css
@@ -4,7 +4,7 @@
     src: url('bernier/Bernier.otf');
 }
 body {
-    background-color: #abcade;
+    background-color: #6cb0dd;
 }
 #container {
   height: 370px;
