--- a/style/main.css
+++ b/style/main.css
@@ -139,7 +139,7 @@ p {
 body {
     padding-top: 120px;
     font-family: 'Raleway', sans-serif;
-    background-color: #abcade;
+    background-color: #e0e0e0;
 }
 .quote {
     padding: 5px;
