--- a/style/main.css
+++ b/style/main.css
@@ -40,7 +40,6 @@ form {
     border-radius: 10px;
     padding: 15px;
 }
-
 label {
 	display:block;
 	margin-top:20px;
@@ -81,7 +80,7 @@ textarea {
 input, textarea,
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
-    font-size: 12px;
+    font-size: 16px;
 }
 .output {
     color: red;
@@ -105,7 +104,7 @@ textarea::-webkit-input-placeholder {
     text-align: center;
 }
 table {
-    width:90% !important;
+    width:95% !important;
     margin-left: 5% !important;
     margin-right: 5% !important;
 }
@@ -142,7 +141,7 @@ p {
 body {
     padding-top: 120px;
     font-family: 'Raleway', sans-serif;
-    background-color: #e0e0e0;
+    background-color: #eeddbd;
 }
 .quote {
     padding: 5px;
