--- a/style/main.css
+++ b/style/main.css
@@ -141,7 +141,7 @@ p {
 body {
     padding-top: 120px;
     font-family: 'Raleway', sans-serif;
-    background-color: #eeddbd;
+    background-color: #ffecc8;
 }
 .quote {
     padding: 5px;
