--- a/style/main.css
+++ b/style/main.css
@@ -14,7 +14,7 @@
     padding-right: 100px;
 }
 .navbar, .navbar-default {
-    background-color: #2d2d2d;
+    background-color: #3c2617;
 }
 .navbar-default .navbar-nav>li>a {
     color: white;
@@ -98,14 +98,17 @@ textarea::-webkit-input-placeholder {
 #brewery {
     width: 25%;
     text-align: center;
+    font-size: 1.5em;
 }
 #website {
     width: 5%;
     text-align: center;
+    font-size: 1.5em;
 }
 #desc {
     width: 70%;
     text-align: center;
+    font-size: 1.5em;
 }
 table {
     width:95% !important;
@@ -145,7 +148,9 @@ p {
 body {
     padding-top: 120px;
     font-family: 'Raleway', sans-serif;
-    background-color: #ffecc8;
+    background: #ff8008; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to left, #ff8008 , #ffc837);
+    background: linear-gradient(to left, #ff8008 , #ffc837);
 }
 .quote {
     padding: 5px;
