--- a/style/main.css
+++ b/style/main.css
@@ -40,7 +40,7 @@ a.selected {
 form {
 	width:auto;
     margin-bottom: 40px;
-    border: 1px solid grey;
+    border: 1px solid white;
     border-radius: 10px;
     padding: 15px;
 }
